# EssayScoring

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: data_exploration.ipynb  train.ipynb
src/essayscoring/: __init__.py  dataloader.py  loss.py  main.py  model.py  trainer.py
